# giacrs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
giacrs_internals/: Cargo.toml  README.md
giacrs_internals/src/: lib.rs
src/: combinatory.rs  context.rs  ffi.rs  gen.rs  integers.rs  lib.rs  main.rs  options.rs  support.rs  types.rs
wrapper/: context.cpp  context.hpp  gen.cpp  gen.hpp  options.cpp  utils.cpp  utils.hpp
